<resources>

    <string name="app_name">Safe Riding</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="btn_login_sign">회원가입</string>
    <string name="btn_go_login">로그인</string>
    <string name="btn_facebook_login">Facebook으로 계속하기</string>

    <string name="btn_login">로그인</string>
    <string name="text_find_pass">비밀번호를 잊으셨나요?</string>
    <string name="btn_temp_pass">재설정 이메일 보내기</string>
    <string name="btn_go_next">계정 만들기</string>
    <string name="btn_display_policy">정책보기</string>
    <string name="btn_display_agree">약관보기</string>
    <string name="btn_complete">완료</string>
    <string name="btn_go_main">안전운행 시작하기</string>
    <string name="edit_user_email">이메일</string>
    <string name="edit_user_password">비밀번호</string>
    <string name="edit_user_password_confirm">비밀번호 확인</string>
    <string name="check_agree">개인정책동의</string>
    <string name="check_policy">약관동의</string>
    <string name="hello_blank_fragment">Blank</string>
    <string name="edit_user_name">이름</string>
    <string name="btn_connect_device">기기검색</string>
    <string name="switch_vibrator">진동</string>
    <string name="switch_backlight">후미등</string>
    <string name="btn_logout">로그아웃</string>
    <string name="btn_help">도움말</string>
    <string name="btn_edit_profile">프로필 편집</string>
    <string name="btn_edit_compelete">변경완료</string>
    <string name="btn_show_use">사용법 보기</string>
    <string name="btn_qna_email">이메일 문의</string>
    <string name="btn_policy_profile">개인정보 정책</string>
    <string name="btn_license">라이센스</string>
    <string name="btn_search_direct_device">직접검색</string>
    <string name="login_fail_message">이메일 또는 비밀번호를 확인해주세요</string>
    <string name="signup_fail_message">가입양식을 확인해주세요</string>
    <string name="signup_policy_message">약관정책을 확인해주세요</string>
    <string name="friend_invite">친구들을 초대해 보세요!</string>
    <string name="find_fail_message">이메일을 확인해주세요</string>
    <string name="text_user_manner"><u>사용약관</u></string>
    <string name="text_private_policy"><u>개인보호정책</u></string>
    <string name="edit_profile_title">프로필 편집</string>
    <string name="account_help">도움말</string>
    <string name="main_message">Safe Riding 과 함께하는 안전한 주행</string>
    <string name="running_message">운행중입니다</string>


    <string name="signup_confirm_message">비밀번호를 확인해주세요</string>
    <string name="text_login_main_title">시작</string>

    <string name="signup_duple_message">이미 존재하는 이메일입니다.</string>
    <string name="text_find_pass_title">비밀번호를 잊으셨나요?</string>
    <string name="signup_policy_fail_message">정책을 모두 동의해주세요</string>
    <string name="text_select_bibrator">진동밴드 선택</string>
    <string name="text_select_backlight">후미등 선택</string>
    <string name="text_bluetooth_device_paired">페어링 완료</string>
    <string name="text_add_friend">친구 추가</string>
    <string name="text_friend_profile">친구 프로필</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="btn_fwd_navigation">네이게이션</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_onoff_band">진동밴드</string>
    <string name="btn_onoff_backlight">후미등</string>
    <string name="btn_band_status">진동밴드 꺼짐</string>
    <string name="btn_backlight_status">후미등 꺼짐</string>

    <string name="nav_safebike">Safe Riding</string>
    <string name="nav_exercise_report">기록</string>
    <string name="nav_friend">친구</string>
    <string name="nav_setting">설정</string>
    <string name="btn_menu_search">검색</string>
    <string name="btn_menu_cancel">취소</string>
    <string name="edit_keyword" />
    <string name="profile_friend"></string>
    <string name="remove_friend">친구삭제</string>
    <string name="search_friend_address">검색</string>
    <string name="search_friend_direct">아이디/이메일 입력</string>
    <string name="text_login_main">Safe Riding</string>
    <string name="text_login_warning">안전하게 주행하세요</string>
    <string name="text_account">계정</string>
    <string name="btn_delete_recent">검색 기록 삭제</string>
    <string name="btn_delete_favorite">즐겨찾기 기록 삭제</string>
    <string name="text_message_favorite">즐겨찾기 기록이 없습니다.</string>
    <string name="text_messag_recent">최근검색 기록이 없습니다.</string>
    <string name="btn_start_navigation">안내시작</string>
    <string name="btn_finish_navigation">안내종료</string>
    <string name="btn_fwd_start_navigation">네비게이션 동작 중</string>
    <string name="text_fv_poi_name">목적지</string>
    <string name="text_rct_poi_name">목적지</string>
    <string name="text_rct_search_date">날짜</string>
    <string name="text_poi_address"></string>
    <string name="text_poi_name" />
    <string name="text_bicyclelane">전용도로</string>
    <string name="text_minimumtime">최소시간</string>
    <string name="text_bicyclelane_totaltime">시간</string>
    <string name="text_bicyclelane_totaldistance">거리</string>
    <string name="text_minimumtime_totaltime">시간</string>
    <string name="text_minimumtime_totaldistance">거리</string>
    <string name="text_bicyclelane_arrivetime">도착시간</string>
    <string name="text_minimumtime_arrivetime">도착시간</string>
    <string name="btn_favorite_onoff" />
    <string name="btn_status_bluetooth" />
    <string name="btn_full_screen" />
    <string name="text_navi_description">길안내</string>
    <string name="text_main_title">Safe Riding</string>
    <string name="text_safebike_main_title">Safe Riding</string>
    <string name="text_tab_recent_title">최근검색</string>
    <string name="text_tab_favorite_title">즐겨찾기</string>
    <string name="facebook_app_id">1015097715217833</string>

</resources><!-- TODO: Remove or change this placeholder text -->

