<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.safering.safebike.MainFragment">



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_fwd_navigation"
        android:id="@+id/btn_fwd_navigation"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_onoff_band"
        android:id="@+id/btn_onoff_band"
        android:layout_marginTop="89dp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/btn_fwd_navigation" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_onoff_backlight"
        android:id="@+id/btn_onoff_backlight"
        android:layout_alignTop="@+id/btn_onoff_band"
        android:layout_toEndOf="@+id/btn_fwd_navigation" />

</RelativeLayout>
