<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"


    tools:context="com.safering.safebike.login.FindPasswordFragment">

    <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/text_find_pass_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_find_pass_title"
            android:layout_marginTop="28dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />



        <EditText
            android:id="@+id/edit_temp_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:background="@drawable/rectangle"
            android:hint="@string/edit_user_email"
            android:lines="1"
            android:paddingBottom="5dp"
            android:paddingLeft="17dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorRegister"
            android:textSize="16sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:hint="@string/edit_user_password"
            android:lines="1"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorRegister"
            android:visibility="invisible"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_email_fail"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="10dp"

            android:text="@string/find_fail_message"
            android:textColor="@color/colorWhite"
            android:visibility="invisible"
            />

        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_temp_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="220dp"
            android:layout_marginLeft="24dp"
            android:textSize="16sp"
            android:text="@string/btn_temp_pass" />



</RelativeLayout>
