<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    tools:context="com.safering.safebike.account.AccountHelpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_weight="3">

        <ImageView
            android:id="@+id/image_safebike_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/safebike_big" />

        <TextView
            android:id="@+id/text_safebike_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="13dp"

            android:layout_alignTop="@id/image_safebike_logo"
            android:layout_below="@id/image_safebike_logo"
            android:layout_toRightOf="@id/image_safebike_logo"
            android:textColor="@color/colorBlack"

            android:text="SafeBike" />

        <TextView
            android:id="@+id/text_safebike_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/text_safebike_title"
            android:layout_below="@id/text_safebike_title"
            android:text="copyright 2015 SAFE BIKE" />

        <TextView
            android:id="@+id/text_safebike_right"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/text_safebike_copyright"
            android:layout_below="@id/text_safebike_copyright"
            android:text="ALL RIGHT RESERVED" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_show_use"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/colorBlack"

            android:text="@string/btn_show_use"
            />

        <TextView
            android:id="@+id/text_qna_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/colorBlack"


            android:text="@string/btn_qna_email"
            />

        <TextView
            android:id="@+id/text_policy_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/colorBlack"


            android:text="@string/btn_policy_profile"
            />

        <TextView
            android:id="@+id/text_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/colorBlack"

            android:text="@string/btn_license"
            />
    </LinearLayout>

</LinearLayout>
